# srs

./: .gitignore  Caddyfile  README.md  compose.yaml
backend/: .env.sample  .gitignore  Dockerfile  pyproject.toml
backend/db/: database.py
backend/notebooks/: fit.ipynb  load.ipynb  util.py
backend/src/api/: main.py
backend/src/api/routers/: buggies.py  drivers.py  exports.py  file.py  pushers.py  rolls.py  sensors.py
backend/src/db/: database.py  srs.db
backend/src/lib/: events.py  fit.py  geo.py  racebox.py  signal.py
backend/src/notebooks/: fit.ipynb  load.ipynb  match.ipynb  profile.ipynb  racebox.ipynb  test.py
backend/src/notebooks/data/: activity_poolswim.json  deviceInfo.json  mediaList.json  media_list_zuke_r.json  medialist_kp_f.json  status.json
backend/src/notebooks/data/ir/: medialist.json
frontend/: .cta.json  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: manifest.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: Autocomplete.tsx  Header.tsx  Recording.tsx  RecordingEdit.tsx  RecordingHeader.tsx  RecordingView.tsx  RollAnalysis.tsx  RollEdit.tsx  RollEventList.tsx  RollGraph.tsx  RollGraphs.tsx  RollHeader.tsx  RollMap.tsx  RollSidebar.tsx  RollTree.tsx  RollVideo.tsx  RollView.tsx  RollsTable.css  RollsTable.tsx  SidebarFilters.tsx  VideoTimeline.tsx
frontend/src/lib/: constants.ts  format.ts  roll.d.ts  url.ts
frontend/src/routes/: __root.tsx  index.tsx  recording.$rollId.tsx  rolls.tsx  rolls.{-$rollId}.tsx
frontend/src/routes/rolls/: new.tsx  (+5 more)
