[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.13.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "garmin-fit-sdk>=21.178.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
