[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.13.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.2",
    "garmin-fit-sdk>=21.178.0",
    "geopandas>=1.1.2",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "orjson>=3.11.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "api"
